--- a/Hibernate/src/main/webapp/WEB-INF/web.xml
+++ b/Hibernate/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 
 	<display-name>Spring MVC Application</display-name>
 
-    <servlet>
+    <!--servlet>
 		<servlet-name>mvc-dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
@@ -14,5 +14,5 @@
 	<servlet-mapping>
 		<servlet-name>mvc-dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping-->
 </web-app>
