--- a/Hibernate/pom.xml
+++ b/Hibernate/pom.xml
@@ -113,6 +113,13 @@
             <version>2.2.10</version>
         </dependency>
 
+        <!-- Google gson-2.2.2 jar -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
