--- a/Hibernate/pom.xml
+++ b/Hibernate/pom.xml
@@ -128,6 +128,12 @@
             <version>2.2.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>3.4.0.GA</version>
+        </dependency>
+
     </dependencies>
 
     <build>
