Пиндец падла, потратил кучу времени на отладку, на совмещение версий и чистку не нужных зависимостей, их конфликты. и т.д. и.т. и оно запустилось, и коряво работает!!!! Я сонный, злой и иду спать.
- ошибка в заполнении имени по-русски, знаю как поправить, все потом..

                                                          Signed-off-by: andrew-okhrimchuk <andrew456gold@gmail.com>

Signed-off-by: andrew-okhrimchuk <andrew456gold@gmail.com>

--- a/Hibernate/pom.xml
+++ b/Hibernate/pom.xml
@@ -70,11 +70,9 @@
             <artifactId>spring-integration-file</artifactId>
             <version>4.2.1.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.1.0.Final</version>
-        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+
+
         <dependency>
             <groupId>javassist</groupId>
             <artifactId>javassist</artifactId>
@@ -83,7 +81,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.38</version>
+            <version>5.1.42</version>
         </dependency>
         <dependency>
             <groupId>javax.transaction</groupId>
@@ -115,11 +113,7 @@
 
 
         <!--JSF (include "jsf-api" and "jsf-impl")-->
-        <dependency>
-            <groupId>org.glassfish</groupId>
-            <artifactId>javax.faces</artifactId>
-            <version>2.2.10</version>
-        </dependency>
+
 
         <!-- Google gson-2.2.2 jar -->
         <dependency>
@@ -131,7 +125,19 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>3.4.0.GA</version>
+            <version>5.2.10.Final</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.0-api -->
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.0.Final</version>
+        </dependency>
+        <dependency> <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.3.0.Final</version>
         </dependency>
 
     </dependencies>
