--- a/Hibernate/pom.xml
+++ b/Hibernate/pom.xml
@@ -61,18 +61,18 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
+        </dependency-->
+        <!--dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-file</artifactId>
@@ -169,13 +169,11 @@
             <artifactId>tomcat-jdbc</artifactId>
             <version>8.5.20</version>
         </dependency>
-
-
-
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.8</version>
+            <version>6.9.8</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
@@ -189,11 +187,11 @@
 
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.0</version>
+                <version>2.4.3</version>
                 <configuration>
-                    <includes>
-                        <include>**/*Tests.java</include>
-                    </includes>
+                        <!--include>**/*Test.java</include-->
+                <group>init</group>
+
                 </configuration>
             </plugin>
             <plugin>
