--- a/Hibernate/pom.xml
+++ b/Hibernate/pom.xml
@@ -61,12 +61,12 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
         </dependency>
-        <!--dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
             <scope>test</scope>
-        </dependency-->
+        </dependency>
         <!--dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
