--- a/Hibernate/pom.xml
+++ b/Hibernate/pom.xml
@@ -188,6 +188,19 @@
             <artifactId>hibernate-c3p0</artifactId>
             <version>3.6.3.Final</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <version>2.7</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.4.3</version>
+        </dependency>
+
 
 
     </dependencies>
@@ -200,11 +213,13 @@
         <plugins>
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.4.3</version>
                 <configuration>
-                        <!--include>**/*Test.java</include-->
+                <!--include>**/*Test.java</include-->
                 <!--group>init</group-->
+                    <groups>init</groups>
 
                 </configuration>
             </plugin>
@@ -218,6 +233,12 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.9</version>
+            </plugin>
+
 
         </plugins>
     </build>
