--- a/Hibernate/pom.xml
+++ b/Hibernate/pom.xml
@@ -19,6 +19,7 @@
         <hamcrest.version>1.3</hamcrest.version>
         <cglib.version>2.2.2</cglib.version>
         <spring.data>1.3.4.RELEASE</spring.data>
+        <dbunit.version>2.2</dbunit.version>
     </properties>
 
     <dependencyManagement>
@@ -201,6 +202,12 @@
             <version>2.4.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>dbunit</groupId>
+            <artifactId>dbunit</artifactId>
+            <version>${dbunit.version}</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
