--- a/Hibernate/pom.xml
+++ b/Hibernate/pom.xml
@@ -68,12 +68,12 @@
             <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
-        <!--dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
-        </dependency-->
+        </dependency>
         <dependency>
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-file</artifactId>
@@ -111,12 +111,6 @@
             <version>1.2</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
-        <!--dependency>
-            <groupId>commons-dbcp</groupId>
-            <artifactId>commons-dbcp</artifactId>
-            <version>1.4</version>
-        </dependency-->
         <!-- Google gson-2.2.2 jar -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -170,6 +164,14 @@
             <artifactId>tomcat-jdbc</artifactId>
             <version>8.5.20</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/jboss/jboss-j2ee -->
+        <dependency>
+            <groupId>jboss</groupId>
+            <artifactId>jboss-j2ee</artifactId>
+            <version>4.2.2.GA</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -203,9 +205,16 @@
         </dependency>
 
         <dependency>
-            <groupId>dbunit</groupId>
+            <groupId>org.dbunit</groupId>
             <artifactId>dbunit</artifactId>
             <version>${dbunit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-test -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>4.0.0.RELEASE</version>
             <scope>test</scope>
         </dependency>
 
